--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -17,6 +17,11 @@
   </div>
 
   <div class="field">
+    <%= form.label :author_id %>
+    <%=form.collection_select :author_id, @authors,:id,:name%>
+  </div>
+
+  <div class="field">
     <%= form.label :body %>
     <%= form.text_field :body, id: :post_body %>
   </div>
