--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,6 +6,11 @@
 </p>
 
 <p>
+  <strong>Author:</strong>
+  <%= @post.author.name%>
+</p>
+
+<p>
   <strong>Body:</strong>
   <%= @post.body %>
 </p>
