--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,5 +15,11 @@
   <%= @post.body %>
 </p>
 
+<h3>Comments</h3>
+<% @post.comments.each do |comment| %>
+  <pre><%= comment.comment %></pre>
+<% end %>
+
+<%= link_to 'Comment', new_comment_path %> |
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
