--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -10,5 +10,13 @@
   <%= @author.email %>
 </p>
 
+<h3>Posts</h3>
+<ul>
+  <li><%= link_to 'All Posts', posts_by_author_path(@author) %></li>
+  <% @author.posts.each do |post| %>
+    <li><%= link_to post.title, post_path(post) %></li>
+  <% end %>
+</ul>
+
 <%= link_to 'Edit', edit_author_path(@author) %> |
 <%= link_to 'Back', authors_path %>
